--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 .remote-sync.json
 .DS_Store
 .ipynb_checkpoints/*
+.ipynb_checkpoints\*
 ._*
 art*
 x_*
 *~
 pyscript_imagecalc.m
 *.out
-__pycache__/imcalc.cpython-37.pyc
+__pycache__/*.pyc
 mc_spm2afni
 multipleCompCorr_spm2afni
-*pyc
+*.pyc
 *ipynb
+*/*ipynb
+*\*ipynb
